--- a/Interfaces/Base.lproj/AppearancePreferencesView.xib
+++ b/Interfaces/Base.lproj/AppearancePreferencesView.xib
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" customObjectInstantitationMethod="direct">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11762" systemVersion="16C68" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6254"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11762"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="AppearancePreferencesViewController">
@@ -20,30 +21,27 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <view id="S8x-KB-PLV">
-            <rect key="frame" x="0.0" y="0.0" width="501" height="184"/>
+            <rect key="frame" x="0.0" y="0.0" width="501" height="161"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
-                <textField verticalHuggingPriority="750" id="ftO-a4-X4r">
-                    <rect key="frame" x="17" y="145" width="154" height="17"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="right" title="Article list font:" id="auD-UC-Pij">
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" setsMaxLayoutWidthAtFirstLayout="YES" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ftO-a4-X4r">
+                    <rect key="frame" x="18" y="122" width="97" height="17"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Article list font:" id="auD-UC-Pij">
                         <font key="font" metaFont="system"/>
-                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <textField verticalHuggingPriority="750" id="2ko-ff-Gpu">
-                    <rect key="frame" x="17" y="115" width="154" height="17"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="right" title="Folder list font:" id="B5v-p5-vrf">
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" setsMaxLayoutWidthAtFirstLayout="YES" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ko-ff-Gpu">
+                    <rect key="frame" x="18" y="90" width="97" height="17"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Folder list font:" id="B5v-p5-vrf">
                         <font key="font" metaFont="system"/>
-                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <button id="94k-AE-ngj">
-                    <rect key="frame" x="30" y="52" width="233" height="18"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                <button verticalHuggingPriority="751" verticalCompressionResistancePriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="94k-AE-ngj">
+                    <rect key="frame" x="30" y="38" width="223" height="18"/>
                     <buttonCell key="cell" type="check" title="Never use font sizes smaller than" bezelStyle="regularSquare" imagePosition="left" alignment="left" inset="2" id="zfJ-Ge-Cxe">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
@@ -52,28 +50,25 @@
                         </connections>
                     </buttonCell>
                 </button>
-                <textField verticalHuggingPriority="750" id="omz-Xk-hdX">
-                    <rect key="frame" x="176" y="142" width="204" height="22"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="center" title="(Sample)" drawsBackground="YES" id="azr-ft-M4J">
+                <textField horizontalHuggingPriority="249" verticalHuggingPriority="750" setsMaxLayoutWidthAtFirstLayout="YES" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="omz-Xk-hdX">
+                    <rect key="frame" x="121" y="119" width="275" height="22"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="center" title="(Sample)" drawsBackground="YES" usesSingleLineMode="YES" id="azr-ft-M4J">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <textField verticalHuggingPriority="750" id="7Ry-8o-LiV">
-                    <rect key="frame" x="176" y="112" width="204" height="22"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="center" title="(Sample)" drawsBackground="YES" id="g63-xD-ICn">
+                <textField horizontalHuggingPriority="249" verticalHuggingPriority="750" setsMaxLayoutWidthAtFirstLayout="YES" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Ry-8o-LiV">
+                    <rect key="frame" x="121" y="87" width="275" height="22"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="center" title="(Sample)" drawsBackground="YES" usesSingleLineMode="YES" id="g63-xD-ICn">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <button verticalHuggingPriority="750" id="o7p-1v-UGN">
-                    <rect key="frame" x="382" y="134" width="105" height="32"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <buttonCell key="cell" type="push" title="Select..." bezelStyle="rounded" alignment="center" borderStyle="border" inset="2" id="gGT-YP-aum">
+                <button horizontalHuggingPriority="750" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="o7p-1v-UGN">
+                    <rect key="frame" x="398" y="112" width="89" height="32"/>
+                    <buttonCell key="cell" type="push" title="Select…" bezelStyle="rounded" alignment="center" borderStyle="border" inset="2" id="gGT-YP-aum">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="system"/>
                     </buttonCell>
@@ -81,10 +76,9 @@
                         <action selector="selectArticleFont:" target="-2" id="KUO-H6-381"/>
                     </connections>
                 </button>
-                <button verticalHuggingPriority="750" id="V2j-NG-qbV">
-                    <rect key="frame" x="382" y="105" width="105" height="32"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <buttonCell key="cell" type="push" title="Select..." bezelStyle="rounded" alignment="center" borderStyle="border" inset="2" id="BDw-v3-mpF">
+                <button horizontalHuggingPriority="750" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="V2j-NG-qbV">
+                    <rect key="frame" x="398" y="80" width="89" height="32"/>
+                    <buttonCell key="cell" type="push" title="Select…" bezelStyle="rounded" alignment="center" borderStyle="border" inset="2" id="BDw-v3-mpF">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="system"/>
                     </buttonCell>
@@ -92,18 +86,16 @@
                         <action selector="selectFolderFont:" target="-2" id="SnU-Cs-LlA"/>
                     </connections>
                 </button>
-                <textField verticalHuggingPriority="750" id="FYe-O0-wsA">
-                    <rect key="frame" x="17" y="76" width="467" height="17"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FYe-O0-wsA">
+                    <rect key="frame" x="18" y="62" width="465" height="17"/>
                     <textFieldCell key="cell" sendsActionOnEndEditing="YES" title="When viewing articles or web pages:" id="71S-pg-AjX">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <button id="zi1-dQ-UMg">
+                <button verticalHuggingPriority="750" verticalCompressionResistancePriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="zi1-dQ-UMg">
                     <rect key="frame" x="18" y="18" width="465" height="18"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <buttonCell key="cell" type="check" title="Show feeds icons in folder list" bezelStyle="regularSquare" imagePosition="left" alignment="left" inset="2" id="MEV-HA-bdL">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
@@ -112,10 +104,12 @@
                         </connections>
                     </buttonCell>
                 </button>
-                <comboBox verticalHuggingPriority="750" id="84p-cY-I9v">
-                    <rect key="frame" x="269" y="47" width="48" height="26"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <comboBoxCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" completes="NO" numberOfVisibleItems="5" id="hia-tO-kK6">
+                <comboBox horizontalHuggingPriority="1000" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="84p-cY-I9v">
+                    <rect key="frame" x="259" y="35" width="47" height="26"/>
+                    <constraints>
+                        <constraint firstAttribute="width" priority="250" constant="44" id="JT1-1f-CTt"/>
+                    </constraints>
+                    <comboBoxCell key="cell" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" title="10" drawsBackground="YES" completes="NO" numberOfVisibleItems="5" id="hia-tO-kK6">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -125,6 +119,37 @@
                     </connections>
                 </comboBox>
             </subviews>
+            <constraints>
+                <constraint firstItem="94k-AE-ngj" firstAttribute="baseline" secondItem="84p-cY-I9v" secondAttribute="baseline" id="0bx-Vo-iQp"/>
+                <constraint firstItem="7Ry-8o-LiV" firstAttribute="baseline" secondItem="2ko-ff-Gpu" secondAttribute="baseline" id="50v-W9-Syp"/>
+                <constraint firstItem="94k-AE-ngj" firstAttribute="leading" secondItem="FYe-O0-wsA" secondAttribute="leading" constant="12" id="5nT-Av-lU3"/>
+                <constraint firstItem="2ko-ff-Gpu" firstAttribute="leading" secondItem="S8x-KB-PLV" secondAttribute="leading" constant="20" symbolic="YES" id="7Zd-DR-wWf"/>
+                <constraint firstItem="V2j-NG-qbV" firstAttribute="width" secondItem="o7p-1v-UGN" secondAttribute="width" id="8UU-qe-tHa"/>
+                <constraint firstItem="7Ry-8o-LiV" firstAttribute="leading" secondItem="2ko-ff-Gpu" secondAttribute="trailing" constant="8" symbolic="YES" id="E7G-uV-3HP"/>
+                <constraint firstItem="84p-cY-I9v" firstAttribute="leading" secondItem="94k-AE-ngj" secondAttribute="trailing" constant="8" id="G8g-cA-hZ7"/>
+                <constraint firstAttribute="bottom" secondItem="zi1-dQ-UMg" secondAttribute="bottom" constant="20" symbolic="YES" id="GJj-qp-eQM"/>
+                <constraint firstItem="o7p-1v-UGN" firstAttribute="leading" secondItem="omz-Xk-hdX" secondAttribute="trailing" constant="8" symbolic="YES" id="Hbq-Ve-X2P"/>
+                <constraint firstItem="7Ry-8o-LiV" firstAttribute="width" secondItem="omz-Xk-hdX" secondAttribute="width" id="IIO-Nb-bIq"/>
+                <constraint firstItem="V2j-NG-qbV" firstAttribute="baseline" secondItem="2ko-ff-Gpu" secondAttribute="baseline" id="KOW-mz-UxG"/>
+                <constraint firstItem="FYe-O0-wsA" firstAttribute="top" secondItem="7Ry-8o-LiV" secondAttribute="bottom" constant="8" symbolic="YES" id="Kju-Q0-ycV"/>
+                <constraint firstItem="FYe-O0-wsA" firstAttribute="leading" secondItem="S8x-KB-PLV" secondAttribute="leading" constant="20" symbolic="YES" id="MFE-Fo-CFf"/>
+                <constraint firstItem="zi1-dQ-UMg" firstAttribute="top" secondItem="94k-AE-ngj" secondAttribute="bottom" constant="6" symbolic="YES" id="O0h-EH-ef8"/>
+                <constraint firstItem="omz-Xk-hdX" firstAttribute="leading" secondItem="ftO-a4-X4r" secondAttribute="trailing" constant="8" symbolic="YES" id="RLz-NI-6gQ"/>
+                <constraint firstItem="omz-Xk-hdX" firstAttribute="top" secondItem="S8x-KB-PLV" secondAttribute="top" constant="20" symbolic="YES" id="RMC-YT-kR3"/>
+                <constraint firstItem="ftO-a4-X4r" firstAttribute="leading" secondItem="S8x-KB-PLV" secondAttribute="leading" constant="20" symbolic="YES" id="Unh-cz-fnV"/>
+                <constraint firstItem="94k-AE-ngj" firstAttribute="top" secondItem="FYe-O0-wsA" secondAttribute="bottom" constant="8" symbolic="YES" id="b5O-X5-v7D"/>
+                <constraint firstAttribute="trailing" secondItem="FYe-O0-wsA" secondAttribute="trailing" constant="20" symbolic="YES" id="cJm-EL-GQI"/>
+                <constraint firstItem="ftO-a4-X4r" firstAttribute="baseline" secondItem="omz-Xk-hdX" secondAttribute="baseline" id="dyr-7Q-1Gs"/>
+                <constraint firstItem="7Ry-8o-LiV" firstAttribute="top" secondItem="omz-Xk-hdX" secondAttribute="bottom" constant="10" symbolic="YES" id="fKZ-i1-Qyg"/>
+                <constraint firstItem="o7p-1v-UGN" firstAttribute="baseline" secondItem="ftO-a4-X4r" secondAttribute="baseline" id="fyr-CN-6Gd"/>
+                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="84p-cY-I9v" secondAttribute="trailing" constant="20" symbolic="YES" id="gIk-Gv-V87"/>
+                <constraint firstAttribute="trailing" secondItem="o7p-1v-UGN" secondAttribute="trailing" constant="20" symbolic="YES" id="hHb-eV-zPk"/>
+                <constraint firstAttribute="trailing" secondItem="zi1-dQ-UMg" secondAttribute="trailing" constant="20" symbolic="YES" id="iKj-LV-mjZ"/>
+                <constraint firstItem="zi1-dQ-UMg" firstAttribute="leading" secondItem="S8x-KB-PLV" secondAttribute="leading" constant="20" symbolic="YES" id="li8-JB-djr"/>
+                <constraint firstAttribute="trailing" secondItem="V2j-NG-qbV" secondAttribute="trailing" constant="20" symbolic="YES" id="qAJ-xv-in4"/>
+                <constraint firstItem="V2j-NG-qbV" firstAttribute="leading" secondItem="7Ry-8o-LiV" secondAttribute="trailing" constant="8" symbolic="YES" id="yto-Cl-Jah"/>
+            </constraints>
+            <point key="canvasLocation" x="138.5" y="168.5"/>
         </view>
     </objects>
 </document>
