--- a/Interfaces/Base.lproj/ActivityViewer.xib
+++ b/Interfaces/Base.lproj/ActivityViewer.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11762" systemVersion="16C68" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11762"/>
@@ -17,7 +17,7 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <window title="Activity Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" hidesOnDeactivate="YES" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="activityViewer" animationBehavior="default" id="8" userLabel="Panel" customClass="NSPanel">
+        <window title="Activity" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" hidesOnDeactivate="YES" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" frameAutosaveName="activityViewer" animationBehavior="default" tabbingMode="disallowed" id="8" userLabel="Panel" customClass="NSPanel">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" resizable="YES" utility="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="150" y="449" width="646" height="563"/>
@@ -27,19 +27,18 @@
                 <rect key="frame" x="0.0" y="0.0" width="646" height="563"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <splitView id="36" customClass="ThinSplitView">
-                        <rect key="frame" x="0.0" y="-2" width="646" height="565"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    <splitView dividerStyle="paneSplitter" translatesAutoresizingMaskIntoConstraints="NO" id="36">
+                        <rect key="frame" x="0.0" y="0.0" width="646" height="564"/>
                         <subviews>
-                            <scrollView autohidesScrollers="YES" horizontalLineScroll="16" horizontalPageScroll="10" verticalLineScroll="16" verticalPageScroll="10" usesPredominantAxisScrolling="NO" id="16">
-                                <rect key="frame" x="0.0" y="0.0" width="646" height="364"/>
+                            <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="16" horizontalPageScroll="10" verticalLineScroll="16" verticalPageScroll="10" usesPredominantAxisScrolling="NO" id="16">
+                                <rect key="frame" x="0.0" y="0.0" width="646" height="363"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <clipView key="contentView" id="vuC-mn-Vhc">
-                                    <rect key="frame" x="1" y="0.0" width="644" height="363"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="646" height="363"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnReordering="NO" multipleSelection="NO" autosaveColumns="NO" rowHeight="14" headerView="44" id="17" customClass="ExtendedTableView">
-                                            <rect key="frame" x="0.0" y="0.0" width="644" height="340"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="646" height="340"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <size key="intercellSpacing" width="3" height="2"/>
                                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -71,7 +70,7 @@
                                                     <sortDescriptor key="sortDescriptorPrototype" selector="caseInsensitiveCompare:" sortKey="name"/>
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                 </tableColumn>
-                                                <tableColumn identifier="status" editable="NO" width="306.66162109375" minWidth="40.66162109375" maxWidth="1000" id="19">
+                                                <tableColumn identifier="status" editable="NO" width="308.66162109375" minWidth="40.66162109375" maxWidth="1000" id="19">
                                                     <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Status">
                                                         <font key="font" metaFont="smallSystem"/>
                                                         <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -93,8 +92,11 @@
                                         </tableView>
                                     </subviews>
                                 </clipView>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="100" id="0mm-3Z-4qd"/>
+                                </constraints>
                                 <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="43">
-                                    <rect key="frame" x="1" y="-30" width="629" height="15"/>
+                                    <rect key="frame" x="0.0" y="353" width="632" height="16"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                                 <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="45">
@@ -102,34 +104,37 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                                 <tableHeaderView key="headerView" id="44">
-                                    <rect key="frame" x="0.0" y="0.0" width="644" height="23"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="646" height="23"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableHeaderView>
                             </scrollView>
-                            <scrollView horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" id="34">
-                                <rect key="frame" x="0.0" y="373" width="646" height="192"/>
+                            <scrollView borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" id="34">
+                                <rect key="frame" x="0.0" y="373" width="646" height="191"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <clipView key="contentView" id="fSJ-fr-xBI">
-                                    <rect key="frame" x="1" y="1" width="644" height="190"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="646" height="191"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <textView editable="NO" importsGraphics="NO" richText="NO" usesFontPanel="YES" findStyle="panel" usesRuler="YES" quoteSubstitution="YES" dashSubstitution="YES" textReplacement="YES" smartInsertDelete="YES" id="35">
-                                            <rect key="frame" x="0.0" y="0.0" width="644" height="190"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="646" height="191"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                            <size key="minSize" width="644" height="190"/>
+                                            <size key="minSize" width="646" height="191"/>
                                             <size key="maxSize" width="646" height="10000000"/>
                                             <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                         </textView>
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </clipView>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="RRg-fO-ewk"/>
+                                </constraints>
                                 <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="YES" id="46">
                                     <rect key="frame" x="-100" y="-100" width="87" height="18"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
-                                <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="47">
-                                    <rect key="frame" x="629" y="1" width="16" height="190"/>
+                                <scroller key="verticalScroller" verticalHuggingPriority="750" horizontal="NO" id="47">
+                                    <rect key="frame" x="630" y="0.0" width="16" height="191"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                             </scrollView>
@@ -138,12 +143,22 @@
                             <real value="250"/>
                             <real value="250"/>
                         </holdingPriorities>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="wantsLayer" value="YES"/>
+                        </userDefinedRuntimeAttributes>
                     </splitView>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="36" firstAttribute="leading" secondItem="7" secondAttribute="leading" id="5gF-Dd-Tnv"/>
+                    <constraint firstItem="36" firstAttribute="top" secondItem="7" secondAttribute="top" constant="-1" id="6pC-hJ-XlU"/>
+                    <constraint firstAttribute="trailing" secondItem="36" secondAttribute="trailing" id="ZaB-tE-sT7"/>
+                    <constraint firstAttribute="bottom" secondItem="36" secondAttribute="bottom" id="aiE-so-deZ"/>
+                </constraints>
             </view>
             <connections>
                 <outlet property="delegate" destination="-2" id="14"/>
             </connections>
+            <point key="canvasLocation" x="141" y="186.5"/>
         </window>
     </objects>
 </document>
